gl33-master/src/test/deca/context/invalid/other/affectation_string_float.deca
// Invalid test
// Affectation d'un string à un flottant

{
   String s;
   float x;

   x = s;
   x = "non";
}
